# prefer-dynamic2

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml
hello-world/: Cargo.toml
prefer-dynamic2/: Cargo.toml  build.rs
